@@ -55,8 +55,8 @@
      <rect>
       <x>100</x>
       <y>20</y>
-      <width>71</width>
-      <height>16</height>
+      <width>161</width>
+      <height>18</height>
      </rect>
     </property>
     <property name="text" >
@@ -128,7 +128,7 @@
     </rect>
    </property>
    <property name="currentIndex" >
-    <number>0</number>
+    <number>2</number>
    </property>
    <widget class="QWidget" name="tab" >
     <attribute name="title" >
